--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.5",
     "@angular/ssr": "^17.0.5",
     "@netlify/functions": "^2.4.0",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "firebase": "^10.7.0",
     "rxjs": "~7.8.0",
